aw: Fix shouldOverrideUrlLoading exception propagation regression.

PlzNavigate added another JNI call that occurs from
content::NavigationRequest::OnRequestFailed after the exception
caused in the shouldOverrideUrlLoading call. It's not legal to call
into Java with an uncleared exception, and the second call isn't
unchecked either. so the Java exception is turned into a native
crash. This CL makes sure that we exit back to the event loop, and
also adds a test that shouldOverrideUrlLoading exceptions make it
back to the UI thread.

Bug: 825195
Change-Id: I447f7feecf45cd1d6cd94f7af16bb64e0a1c43b5
Reviewed-on: https://chromium-review.googlesource.com/966823
Commit-Queue: Tobias Sargeant <tobiasjs@chromium.org>
Reviewed-by: John Abd-El-Malek <jam@chromium.org>
Reviewed-by: Richard Coles <torne@chromium.org>
Cr-Commit-Position: refs/heads/master@{#546486}
Former-commit-id: 8dc609409db1135769fa568af2f3c60d72b714c6