android_webview/browser/aw_contents_client_bridge.cc
@@ -361,15 +361,17 @@ void AwContentsClientBridge::RunBeforeUnloadDialog(
 bool AwContentsClientBridge::ShouldOverrideUrlLoading(const base::string16& url,
                                                       bool has_user_gesture,
                                                       bool is_redirect,
-                                                      bool is_main_frame) {
+                                                      bool is_main_frame,
+                                                      bool* ignore_navigation) {
+  *ignore_navigation = false;
   JNIEnv* env = AttachCurrentThread();
   ScopedJavaLocalRef<jobject> obj = java_ref_.get(env);
   if (obj.is_null())
-    return false;
+    return true;
   ScopedJavaLocalRef<jstring> jurl = ConvertUTF16ToJavaString(env, url);
   devtools_instrumentation::ScopedEmbedderCallbackTask(
       "shouldOverrideUrlLoading");
-  bool did_override = Java_AwContentsClientBridge_shouldOverrideUrlLoading(
+  *ignore_navigation = Java_AwContentsClientBridge_shouldOverrideUrlLoading(
       env, obj, jurl, has_user_gesture, is_redirect, is_main_frame);
   if (HasException(env)) {
     // Tell the chromium message loop to not perform any tasks after the current
@@ -377,9 +379,10 @@ bool AwContentsClientBridge::ShouldOverrideUrlLoading(const base::string16& url,
     // any new JNI calls.
     base::MessageLoopForUI::current()->Abort();
     // If we crashed we don't want to continue the navigation.
-    return true;
+    *ignore_navigation = true;
+    return false;
   }
-  return did_override;
+  return true;
 }
 
 void AwContentsClientBridge::NewDownload(const GURL& url,
